--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@ venv/
 TA/
 tmp/
 under_rec_files/
-problemsua/.env
-problemsua/.mysql.cnf
 *.sqlite3
-.idea
 
 **/__pycache__/
 *.py[cod]
 /staticfiles/
 
 .*
+!.env.example
+!.mysql.cnf.example
